
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u8 ;
struct TYPE_2__ {struct switch_port* ports; } ;
struct switch_val {size_t port_vlan; int len; TYPE_1__ value; } ;
struct switch_port {int flags; size_t id; } ;
struct switch_dev {int dummy; } ;
struct ar8xxx_priv {int* vlan_table; scalar_t__* pvid; int vlan_tagged; } ;


 int SWITCH_PORT_FLAG_TAGGED ;
 struct ar8xxx_priv* swdev_to_ar8xxx (struct switch_dev*) ;

__attribute__((used)) static int
ar8327_sw_set_ports(struct switch_dev *dev, struct switch_val *val)
{
 struct ar8xxx_priv *priv = swdev_to_ar8xxx(dev);
 u8 *vt = &priv->vlan_table[val->port_vlan];
 int i;

 *vt = 0;
 for (i = 0; i < val->len; i++) {
  struct switch_port *p = &val->value.ports[i];

  if (p->flags & (1 << SWITCH_PORT_FLAG_TAGGED)) {
   if (val->port_vlan == priv->pvid[p->id]) {
    priv->vlan_tagged |= (1 << p->id);
   }
  } else {
   priv->vlan_tagged &= ~(1 << p->id);
   priv->pvid[p->id] = val->port_vlan;
  }

  *vt |= 1 << p->id;
 }
 return 0;
}
